프론트 리팩토링 및 도커 컴포즈생성